--- a/index.ejs
+++ b/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>바닐라 스크립트 라니...</title>
+    <title>Agit Kanban</title>
     <link rel="shortcut icon" href="/assets/images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/assets/styles/common.css">
